基础案例推进

--- a/docs/1.ws协议解析.md
+++ b/docs/1.ws协议解析.md
@@ -1,4 +1,112 @@
 # ws 协议解析
 
+## 握手部分
+
+## 数据帧解析
+官方提供的数据帧结构图如下：
+
+```
+0                   1                   2                   3
+  0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1
+ +-+-+-+-+-------+-+-------------+-------------------------------+
+ |F|R|R|R| opcode|M| Payload len |    Extended payload length    |
+ |I|S|S|S|  (4)  |A|     (7)     |             (16/64)           |
+ |N|V|V|V|       |S|             |   (if payload len==126/127)   |
+ | |1|2|3|       |K|             |                               |
+ +-+-+-+-+-------+-+-------------+ - - - - - - - - - - - - - - - +
+ |     Extended payload length continued, if payload len == 127  |
+ + - - - - - - - - - - - - - - - +-------------------------------+
+ |                               |Masking-key, if MASK set to 1  |
+ +-------------------------------+-------------------------------+
+ | Masking-key (continued)       |          Payload Data         |
+ +-------------------------------- - - - - - - - - - - - - - - - +
+ :                     Payload Data continued ...                :
+ + - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
+ |                     Payload Data continued ...                |
+ +---------------------------------------------------------------+
+```
+
+### 第一个字节（0-7）
+在第一个字节中存储着 `FIN`、`RSV` 与 `opcode` 这些信息：  
+`FIN` 位于第1位，表示帧结束（TODO 后续补充其作用）  
+`RSV1~3` 位于2～4位，作为预留，正常情况下为 0
+`opcode` 位于5～8位，为操作码，用于标识数据类型
+
+### 第二个字节（8-15）
+在第二个字节中存储着 `MASK`、`Payload len` 这些信息：
+`MASK` 位于第1位，标识这个数据帧的数据是否使用掩码  
+`Payload len` 位于第2～8位，标识传输过来的数据的长度，但由于只有7位长度，所以只
+能表示0到127的取值，为了描述更大的数据，规定：  
+    1.该部分的值为0到125时才表示数据长度  
+    1.为126时则会用后面的两个字节来存储数据长度  
+    1.为127时则会用后面的八个字节来存储数据长度  
+
+### Masking-key
+如上所述，标识数据长度的部分可能占据1～9个字节，在标识长度的字节结束后，如果 `MASK` 
+的值为1，那么后续的4个字节则是掩码部分，即 `Masking-key`。
+
+### Payload Data
+在 `Masking-key` 之后即为实际传输的数据 `Payload Data` 部分，当 `Masking-key` 存在时那
+么从客户端传输的数据（`Payload Data`）都需要和掩码做一次异或运算以获取相应的值。
+
+### 解析时的实现代码
+参考 [scripts/basic/utils.js](/scripts/basic/utils.js) 中的 `decodeDataFrame` 函数
+```js
+/**
+ * websocket 数据报解析
+ * @param {Buffer} data - websocket 传输的原始数据报
+ * @returns {Object} 解析后的数据
+ * @static
+ */
+static decodeDataFrame (data) {
+    let i = 0;  // 数据帧游标
+
+    // 解析前两个字节数据
+    const frame = {
+        fin: data[i] >> 7,
+        opCode: data[i++] & 15,
+        mask: data[i] >> 7,
+        payloadLength: data[i++] & 0x7F
+    };
+
+    // 处理特殊长度 126 和 127
+    if (frame.payloadLength === 126) {
+        frame.payloadLength = (data[i++] << 8) + data[i++];
+    }
+    if (frame.payloadLength === 127) {
+        i += 4;     // 固定的四个空位
+        frame.payloadLength =
+            (data[i++] << 24) + (data[i++] << 16) +
+            (data[i++] << 8) + data[i++];
+    }
+
+    // 判断是否使用掩码
+    let str = [];
+    if (frame.mask) {
+        frame.maskingKey = [data[i++], data[i++], data[i++], data[i++]];
+        for (let j = 0; j < frame.payloadLength; j++) {
+            str.push(data[i+j]^frame.maskingKey[j%4]);
+        }
+    } else {
+        str = data.slice(i, i + frame.payloadLength);
+    }
+    str = new Buffer(str);
+    if (frame.opCode === 1) {
+        str = str.toString();
+    }
+    frame.payloadData = str;
+    return frame;
+}
+```
+
+### *备注*
+如果对 js 中的位操作不是很熟悉，可以参考 [plus1.js下的位操作](/docs/plus1.js下的位操作.md)
+
+## 数据帧生成
+
+## 操作码说明
+
+## 断开连接操作
+
 ## TODO
 先完成代码部分实验
