增加数据报生成方法

--- a/docs/1.ws协议解析.md
+++ b/docs/1.ws协议解析.md
@@ -103,6 +103,7 @@ static decodeDataFrame (data) {
 如果对 js 中的位操作不是很熟悉，可以参考 [plus1.js下的位操作](/docs/plus1.js下的位操作.md)
 
 ## 数据帧生成
+从服务端发送的数据报结构与客户端发过来的相同，但不需要掩码，所以比较方便。
 
 ## 操作码说明
 
