补充代码案例

--- a/docs/1.ws协议解析.md
+++ b/docs/1.ws协议解析.md
@@ -103,7 +103,45 @@ static decodeDataFrame (data) {
 如果对 js 中的位操作不是很熟悉，可以参考 [plus1.js下的位操作](/docs/plus1.js下的位操作.md)
 
 ## 数据帧生成
-从服务端发送的数据报结构与客户端发过来的相同，但不需要掩码，所以比较方便。
+从服务端发送的数据报结构与客户端发过来的相同，但不需要掩码，所以比较方便。拼接的实现可以参
+考 [scripts/basic/utils.js](/scripts/basic/utils.js) 中的 `encodeDataFrame` 函数：
+```js
+/**
+ * websocket 数据报生成
+ * @param {Object} config - 数据报配置
+ * @param {Number} config.fin - fin 码
+ * @param {Number} config.opCode - 操作码
+ * @param {String} config.payloadData - 需要发送的信息
+ * @return {Buffer} 用于发送的数据报
+ */
+static encodeDataFrame (config) {
+    const start = [];
+    const dataBuf = new Buffer(config.payloadData);
+    const length = dataBuf.length;
+
+    // 生成数据报的第一个字节（fin 与 opCode）
+    start.push((config.fin << 7) + config.opCode);
+
+    // 依据需要发送的信息长度判断需要发送的数据报
+    if (length < 126) {
+        start.push(length);
+    } else if (length < 0x10000) {
+        start.push(126);
+        start.push((length & 0xff00) >> 8);
+        start.push(length & 0xff);
+    } else {
+        start.push(127);
+        start.push(0, 0, 0, 0);     // 一般前4字节留空
+        start.push((length & 0xff000000) >> 24);
+        start.push((length & 0xff0000) >> 16);
+        start.push((length & 0xff00) >> 8);
+        start.push(length & 0xff);
+    }
+
+    // Buffer 合并
+    return Buffer.concat([new Buffer(start), dataBuf]);
+}
+```
 
 ## 操作码说明
 
