文档结构调整

--- a/docs/basic/2.ws数据报结构解析.md
+++ b/docs/basic/2.ws数据报结构解析.md
@@ -1,8 +1,6 @@
-# ws 协议解析
+# ws 数据报结构解析
 
-## 握手部分
-
-## 数据帧解析
+## 数据报的结构与解析
 官方提供的数据帧结构图如下：
 
 ```
@@ -102,7 +100,8 @@ static decodeDataFrame (data) {
 ### *备注*
 如果对 js 中的位操作不是很熟悉，可以参考 [plus1.js下的位操作](/docs/plus1.js下的位操作.md)
 
-## 数据帧生成
+## 数据报的创建
+### 数据报创建方法的实现
 从服务端发送的数据报结构与客户端发过来的相同，但不需要掩码，所以比较方便。拼接的实现可以参
 考 [scripts/basic/utils.js](/scripts/basic/utils.js) 中的 `encodeDataFrame` 函数：
 ```js
@@ -143,9 +142,4 @@ static encodeDataFrame (config) {
 }
 ```
 
-## 操作码说明
-
-## 断开连接操作
-
-## TODO
-先完成代码部分实验
+## 调试
