基础部分文档整理剩余细节部分呢

--- a/docs/basic/3.ws操作码.md
+++ b/docs/basic/3.ws操作码.md
@@ -1,2 +1,84 @@
 # ws 操作码
+在之前的案例中，使用的操作码（opCode）都是 1，在 ws 规范的官方文档中，操作码值以及其
+对应的操作如下：
 
+```
+ |Opcode  | Meaning                             | Reference |
+-+--------+-------------------------------------+-----------|
+ | 0      | Continuation Frame                  | RFC 6455  |
+-+--------+-------------------------------------+-----------|
+ | 1      | Text Frame                          | RFC 6455  |
+-+--------+-------------------------------------+-----------|
+ | 2      | Binary Frame                        | RFC 6455  |
+-+--------+-------------------------------------+-----------|
+ | 8      | Connection Close Frame              | RFC 6455  |
+-+--------+-------------------------------------+-----------|
+ | 9      | Ping Frame                          | RFC 6455  |
+-+--------+-------------------------------------+-----------|
+ | 10     | Pong Frame                          | RFC 6455  |
+-+--------+-------------------------------------+-----------|
+```
+
+操作码的作用如下：
+0 - 数据分片时中间与结束的片（接着第一片往后）  
+1 - 文本数据  
+2 - 二进制数据  
+8 - 结束连接请求  
+9 - Ping  
+10 - Pong  
+
+## 消息分片
+当一次传输的数据比较大时，可以考虑将数据进行分片发送，ex（[scripts/basic/ws3.1.js](/scripts/basic/ws3.1.js)）：
+```js
+...
+// 向客户端写入消息（分片操作）
+conn.write(utils.encodeDataFrame({
+    fin: 0, opCode: 1, payloadData: '片1'
+}));
+conn.write(utils.encodeDataFrame({
+    fin: 0, opCode: 0, payloadData: '-片2-'
+}));
+conn.write(utils.encodeDataFrame({
+    fin: 1, opCode: 0, payloadData: '片3'
+}));
+...
+```
+
+可以看见这里发送了三个分片：
+```
+-+------+----+-------+------------+-----------------------------------------------------------|
+ |分片  |fin |opCode |payloadData |说明                                                       |
+-+------+----+-------+------------+-----------------------------------------------------------|
+ |分片1 |0   |1      |片1         |消息类型为文本，所以opCode为1；消息未结束，所以fin为0      |
+-+------+----+-------+------------+-----------------------------------------------------------|
+ |分片2 |0   |0      |-片2-       |消息接着分片1的后续，所以opCode为0；消息未结束，所以fin为0 |
+-+------+----+-------+------------+-----------------------------------------------------------|
+ |分片3 |1   |0      |片3         |消息接着分片2的后续，所以opCode为0；消息已结束，所以fin为1 |
+-+------+----+-------+------------+-----------------------------------------------------------|
+```
+
+### 调试
+切换到 `scripts/basic` 目录后，执行 `node ws3.1.js` 启动服务端，打开同目录下的 `index.html`，
+打开浏览器控制台即可查看调试效果。
+
+[docs/basic/ws3.1.png](/docs/basic/ws3.1.png)
+
+## Ping Pong
+操作码 9 和 10 总是成对出现，服务端向客户端发送一个 Ping 帧时，客户端会自动返回一个 Pong 帧，并且
+数据部分与发送的完全相同。如果不同或收不到，则说明网络有问题。
+
+服务端发送Ping（[scripts/basic/ws3.2.js](/scripts/basic/ws3.2.js)）：
+```
+...
+// 握手成功后发送一条 Ping
+conn.write(utils.encodeDataFrame({
+    fin: 1, opCode: 9, payloadData: 'pp测试'
+}));
+...
+```
+
+### 调试
+切换到 `scripts/basic` 目录后，执行 `node ws3.2.js` 启动服务端，打开同目录下的 `index.html`，
+打开浏览器控制台即可查看调试效果。
+
+[docs/basic/ws3.2.png](/docs/basic/ws3.2.png)
