--- a/docs/basic/调试方法说明.md
+++ b/docs/basic/调试方法说明.md
@@ -6,9 +6,20 @@
 ```
 +-scirpts/basic
     +-index.html    客户端案例部分
-    +-server.js     服务端
+    
+    +-ws1.js        握手连接的服务端代码（案例1）
+    +-ws2.js        数据报收发服务端代码（案例2）
+    +-ws3.1.js      分片发送消息服务端代码（案例3.1）
+    +-ws3.2.js      Ping Pong测试服务端代码（案例3.2）
+    
     +-utils.js      服务端依赖的工具方法
 ```
 
-进行调试时，切换到该目录，执行 `node server.js` 即启动了服务端的调试，
-用浏览器打开 `index.html` 并打开控制台即可查看客户端运行效果。
+下载该工程后，切换到上述目录：  
+1.执行 `node ws1.js` 即启动了案例1服务端的调试  
+2.用浏览器打开 `index.html` 并打开控制台即可查看客户端运行效果
+
+其余案例：  
+`node ws2.js` - 案例2  
+`node ws3.1.js` - 案例3.1  
+`node ws3.2.js` - 案例3.2
