--- a/docs/basic/1.ws握手建立连接.md
+++ b/docs/basic/1.ws握手建立连接.md
@@ -38,3 +38,7 @@ static handshakeFrame (data) {
 塞入到 header 的 `Sec-WebSocket-Accept` 中。
 
 ## 调试
+切换到 `scripts/basic` 目录后，执行 `node ws1.js` 启动服务端，打开同目录下的 `index.html`，
+打开浏览器控制台即可查看调试效果。
+
+[docs/basic/ws1.png](/docs/basic/ws1.png)
