--- a/docs/basic/2.ws数据报结构解析.md
+++ b/docs/basic/2.ws数据报结构解析.md
@@ -143,3 +143,9 @@ static encodeDataFrame (config) {
 ```
 
 ## 调试
+切换到 `scripts/basic` 目录后，执行 `node ws2.js` 启动服务端，打开同目录下的 `index.html`，
+打开浏览器控制台即可查看调试效果。
+
+[docs/basic/ws2.1.png](/docs/basic/ws2.1.png)
+
+[docs/basic/ws2.2.png](/docs/basic/ws2.2.png)
