基础部分文档整理完毕

--- a/docs/basic/1.ws握手建立连接.md
+++ b/docs/basic/1.ws握手建立连接.md
@@ -41,4 +41,4 @@ static handshakeFrame (data) {
 切换到 `scripts/basic` 目录后，执行 `node ws1.js` 启动服务端，打开同目录下的 `index.html`，
 打开浏览器控制台即可查看调试效果。
 
-[docs/basic/ws1.png](/docs/basic/ws1.png)
+![docs/basic/ws1.png](/docs/basic/ws1.png)
