--- a/docs/basic/2.ws数据报结构解析.md
+++ b/docs/basic/2.ws数据报结构解析.md
@@ -146,6 +146,8 @@ static encodeDataFrame (config) {
 切换到 `scripts/basic` 目录后，执行 `node ws2.js` 启动服务端，打开同目录下的 `index.html`，
 打开浏览器控制台即可查看调试效果。
 
-[docs/basic/ws2.1.png](/docs/basic/ws2.1.png)
+浏览器控制台：
+![docs/basic/ws2.1.png](/docs/basic/ws2.1.png)
 
-[docs/basic/ws2.2.png](/docs/basic/ws2.2.png)
+nodejs 命令行：
+![docs/basic/ws2.2.png](/docs/basic/ws2.2.png)
