--- a/docs/basic/4.ws断开连接.md
+++ b/docs/basic/4.ws断开连接.md
@@ -4,6 +4,59 @@
 原因的文本描述。
 
 ## 服务端主导的断开连接
+如果由服务端发起断开连接，则需要先由服务端向浏览器端推送一个 opCode 为 8 的数据
+帧，然后再执行断开连接即可（直接断开连接也行，但 closeEvent 中的状态码为 1006，
+wasClean 为 false ，表示不是正常断开连接）。
 
+服务端实现代码如下（[scripts/basic/ws4/ws4.1.js](/scripts/basic/ws4/ws4.1.js)）：
+```js
+...
+// 构建断开连接数据报中的数据
+let buf = new Buffer('\0\0连接断开，LOL');   // 头两个字节留空，后续是断开原因
+buf.writeUInt16BE(1000, 0);                  // 在头两个字节中写入状态码 1000
+
+// 发送断开连接数据报
+conn.write(utils.encodeDataFrame({
+    fin: 1, opCode: 8, payloadData: buf
+}));
+
+// 执行断开操作
+conn.end();
+...
+```
+
+### 调试
+切换到 `/scripts/basic/ws4` 目录后，执行 `node ws4.1.js` 启动服务端脚本，打开该目
+录下的 `ws4.1.html` 即可在浏览器中查看相应的效果。
+
+![docs/basic/ws4.1.png](/docs/basic/ws4.1.png)
 
 ## 客户端主导的断开连接
+当由浏览器端主动断开连接时，即在浏览器端执行 `ws.close()` 即可，执行该方法时，会向
+后端发送一个 opCode 为 8 的数据报，同时浏览器端亦会断开该连接。
+
+浏览器端代码示例（[scripts/basic/ws4.2.html](scripts/basic/ws4.2.html)）
+```js
+var ws = new WebSocket('ws://127.0.0.1:8000');
+
+// 握手成功后执行 close 操作
+ws.onopen = function () {
+    console.log('握手成功');
+    ws.close();
+};
+```
+
+而服务端收到该 opCode 为 8 的数据报后亦可以断开连接释放资源：
+```js
+...
+const frame = utils.decodeDataFrame(data);
+if (frame.opCode === 8) {
+    // 收到断开连接的数据报后执行 conn.end()
+    console.log(frame);
+    conn.end();
+}
+...
+```
+
+nodejs 命令行下的调试效果如下：  
+![docs/basic/ws4.2.png](/docs/basic/ws4.2.png)
