--- a/docs/basic/调试方法说明.md
+++ b/docs/basic/调试方法说明.md
@@ -6,13 +6,16 @@
 ```
 +-scirpts/basic
     +-index.html    客户端案例部分
-    
+    +-utils.js      服务端依赖的工具方法
     +-ws1.js        握手连接的服务端代码（案例1）
     +-ws2.js        数据报收发服务端代码（案例2）
     +-ws3.1.js      分片发送消息服务端代码（案例3.1）
     +-ws3.2.js      Ping Pong测试服务端代码（案例3.2）
-    
-    +-utils.js      服务端依赖的工具方法
+    +-ws4       断开连接相关测试
+        +-ws4.1.js      从服务端断开连接的服务端代码（案例4.1）
+        +-ws4.2.js      从客户端断开连接的服务端代码（案例4.2）
+        +-ws4.1.html    从服务端断开连接的前端页面（案例4.1）
+        +-ws4.2.html    从客户端断开连接的前端页面（案例4.2）
 ```
 
 下载该工程后，切换到上述目录：  
@@ -22,4 +25,6 @@
 其余案例：  
 `node ws2.js` - 案例2  
 `node ws3.1.js` - 案例3.1  
-`node ws3.2.js` - 案例3.2
+`node ws3.2.js` - 案例3.2  
+
+案例 4.1、4.2 位于 `scripts/basic/ws4` 目录
