--- a/docs/basic/3.ws操作码.md
+++ b/docs/basic/3.ws操作码.md
@@ -61,7 +61,7 @@ conn.write(utils.encodeDataFrame({
 切换到 `scripts/basic` 目录后，执行 `node ws3.1.js` 启动服务端，打开同目录下的 `index.html`，
 打开浏览器控制台即可查看调试效果。
 
-[docs/basic/ws3.1.png](/docs/basic/ws3.1.png)
+![docs/basic/ws3.1.png](/docs/basic/ws3.1.png)
 
 ## Ping Pong
 操作码 9 和 10 总是成对出现，服务端向客户端发送一个 Ping 帧时，客户端会自动返回一个 Pong 帧，并且
@@ -79,6 +79,6 @@ conn.write(utils.encodeDataFrame({
 
 ### 调试
 切换到 `scripts/basic` 目录后，执行 `node ws3.2.js` 启动服务端，打开同目录下的 `index.html`，
-打开浏览器控制台即可查看调试效果。
+在 nodejs 命令行下即可看到游览器返回的 Pong。
 
-[docs/basic/ws3.2.png](/docs/basic/ws3.2.png)
+![docs/basic/ws3.2.png](/docs/basic/ws3.2.png)
