部分格式修正

--- a/docs/basic/4.ws断开连接.md
+++ b/docs/basic/4.ws断开连接.md
@@ -35,7 +35,7 @@ conn.end();
 当由浏览器端主动断开连接时，即在浏览器端执行 `ws.close()` 即可，执行该方法时，会向
 后端发送一个 opCode 为 8 的数据报，同时浏览器端亦会断开该连接。
 
-浏览器端代码示例（[scripts/basic/ws4.2.html](scripts/basic/ws4.2.html)）
+浏览器端代码示例（[scripts/basic/ws/ws4.2.html](scripts/basic/ws/ws4.2.html)）
 ```js
 var ws = new WebSocket('ws://127.0.0.1:8000');
 
