--- a/docs/basic/调试方法说明.md
+++ b/docs/basic/调试方法说明.md
@@ -2,6 +2,10 @@
 在 websocket 的底层知识部分，采用了 nodejs 进行案例实验，代码部分参考 
 [scripts/basic目录](/scripts/basic)
 
+访问对应的 [github工程](https://github.com/BubuflyStudio/ws-note) 即可获取源码
+
+原始的文章来自于 [次碳酸钴的websocekt专题系列](https://www.web-tinker.com/selection/)
+
 其中代码结构如下：
 ```
 +-scirpts/basic
