--- a/docs/engine_io/1.engine.io的结构解析说明.md
+++ b/docs/engine_io/1.engine.io的结构解析说明.md
@@ -1,1 +1,22 @@
 # engine.io 的结构解析说明
+作为 `socket.io` 所依赖的框架，`engine.io` 主要负责 `socket.io` 中的服务端与客户端的
+长连接通讯部分。
+
+为了兼容不同环境，在 `engine.io` 的内部同时有 `polling`(ajax轮询) 与 `websocket` 两种
+策略。其中 `polling` 部分分为 `post` 与 `jsonp` 方式。
+
+总之，`engine.io` 的主要功为在长连接的通讯这块提供一套稳定且耐操的实现，并对外提供较为
+友好的接口。
+
+## engine.io 结构与通讯策略
+1. server 主要负责管理 socket
+2. 在 server 层完成与 client 的握手（此处的握手是指 engine.io 的自定义握手，区别于ws的握手）后，会建立一个 socket 对象之后与 client 的通讯则都会托管给 socket 进行处理
+3. server 会建立一个 map 维护创建的 socket 对象，每个 socket 都有对应的 id 标识
+4. 这里的 socket 不是 net 模块下的 socket，而是 engine.io 抽象出的结构
+
+
+1. 每个 engine.io socket 对象内部都有一个实例化的 transport 对象
+2. socket 利用 transport 管理数据的收发
+3. socket 依据服务端与客户端的配置决定是否将 polling 升级到 websocket
+
+## engine.io 代码结构
