增加engine.io服务端说明文档

--- a/docs/engine_io/2.自制engine.io服务端.md
+++ b/docs/engine_io/2.自制engine.io服务端.md
@@ -1,1 +1,20 @@
 # 自制 engine.io 服务端
+由于在自己的业务场景只会用到 `engine.io` 的 `websocket` 通讯部分，所以这里对 `engine.io`
+做了一次抽取工作，去除了 `polling` 以及从 `polling` 升级到 `websocket` 的部分。最终做了
+一个mini版的 `engine.io`（代码量也从原先2100行左右简化到600行左右）
+
+## 结构说明
+### 结构图 
+![engine_mini](/docs/engine_io/engine_mini.png)
+
+结构图说明：  
+1. 相较于原 `engine.io` 框架，没有了 `polling` 以及 `polling` 到 `websocket` 的切换  
+2. 将原来的 `transport` 层整合到了 `socket` 层简化相应的结构
+
+## 通讯策略
+client 端会直接通过 `websocket` 的方式与服务端建立连接，在 server 层会将建立的连接以
+及对连接的处理（通讯、保活、超时等）封装为 socket 对象后添加到 `sockets map` 中进行
+管理。
+
+## 文件结构
+// TODO 将 client 重构后整合到一个包中
