--- a/docs/engine_io/1.engine.io的结构解析说明.md
+++ b/docs/engine_io/1.engine.io的结构解析说明.md
@@ -9,14 +9,49 @@
 友好的接口。
 
 ## engine.io 结构与通讯策略
-1. server 主要负责管理 socket
-2. 在 server 层完成与 client 的握手（此处的握手是指 engine.io 的自定义握手，区别于ws的握手）后，会建立一个 socket 对象之后与 client 的通讯则都会托管给 socket 进行处理
-3. server 会建立一个 map 维护创建的 socket 对象，每个 socket 都有对应的 id 标识
-4. 这里的 socket 不是 net 模块下的 socket，而是 engine.io 抽象出的结构
+### 结构图
+![engine_full.png](/docs/engine_io/engine_full.png)
 
+结构图说明：  
+Server：  
+1. server 层主要负责对来自 client 的请求的验证并在握手后创建对应的长连接对象（socket）  
+2. 建立 socket 对象之后与 client 的通讯则都会托管给该 socket 对象进行处理  
+3. server 会建立一个 map 维护创建的 socket 对象，每个 socket 都有对应的 id 标识  
+4. 这里的 socket 不是 net 模块下的 socket，而是 engine.io 抽象出的结构  
 
-1. 每个 engine.io socket 对象内部都有一个实例化的 transport 对象
-2. socket 利用 transport 管理数据的收发
-3. socket 依据服务端与客户端的配置决定是否将 polling 升级到 websocket
+Socket：  
+1. 每个 engine.io socket 对象内部都有一个实例化的 transport 对象  
+2. socket 利用 transport 管理数据的收发  
+3. socket 依据服务端与客户端的配置决定是否将 polling 升级到 websocket  
+
+### 通讯策略
+1. 在默认的配置中，client 会采用 polling 的方式对 server 发起请求完成握手并建立长连接，同
+时服务端会返回当前环境下可以升级到的通讯方式（在这种场景下会返回 ['websocket'] 表示可以升
+级到 websocket 的通讯方式）。
+2. 得到服务端返回的数据后（socket id 标识以及可升级到的通讯方式，这里指可升级到 websocket）
+，client 会尝试使用 websocket 建立连接  
+3. 服务端在收到 client 的升级请求后会移除之前采用 polling 方式建立的长连接，并重新握手采用
+websocket 建立新的长连接  
+4. ws通讯
+
+### 额外说明
+1. 如果由于浏览器版本原因，可能不会采取升级策略而一直使用 polling 策略。  
+2. 如果在初始化 engine.io 的服务端与客户端时都配置了 transports 为 ['websocket']，则在建立
+连接时不会使用 polling 做初次尝试，而是直接使用 websocket 建立连接
 
 ## engine.io 代码结构
+engine.io 服务端代码结构如下
+```
++-engine.io
+    +-lib
+        +-engine.io.js    // 作为 package.json 的 main 的配置，引入并组织了其他的部分，方便使用
+        +-server.js       // 对客户端建立长连接请求的处理，包含验证、握手、创建连接通讯的对象等
+        +-socket.js       // 对连接的具体管理，长连接创建后同时也会创建 socket 对象，并将连接托管给该对象
+        +-transport.js    // transport 层的基类
+        +-transports      // 对 transport 的具体实现，polling.js 与 webssocket.js 均是 transport 的子类
+            +-index.js
+            +-polling-jsonp.js  // polling 中采用 jsonp 通讯方式的实现
+            +-polling-xhr.js    // polling 中采用 xhr 通讯方式的实现
+            +-polling.js        // polling 的父类，继承自 transport，上述 jsonp 与 xhr 均是其子类
+            +-websocket.js      // websocket 的实现，继承自 transport
+```
