--- a/docs/engine_io/2.自制engine.io.md
+++ b/docs/engine_io/2.自制engine.io.md
@@ -4,8 +4,6 @@
 一个mini版的 `engine.io`（服务端代码从原先2100行左右简化到600行左右，客户端则代码简化到300
 行左右）
 
-[engine.io-mini代码参考]
-
 ## 结构说明
 ### 结构图 
 ![engine_mini](/docs/engine_io/engine_mini.png)
@@ -20,3 +18,19 @@ client 端会直接通过 `websocket` 的方式与服务端建立连接，在 se
 管理。
 
 ## 文件结构
+案例代码位于 [scripts/engine_io_mini目录](/scripts/engine_io_mini)，结构说明如下：
+```
++-scripts/engine_io_mini
+    +-libs
+        +-client.js     客户端代码（需要通过webpack编译后使用）
+        +-server.js     服务端主代码
+        +-socket.js     服务端socket逻辑处理代码
+    +-app.js        服务端案例
+    +-dist.js       经过webpack编译后的客户端代码
+    +-index.html    测试用的web页面
+    +-index.js      参与编译过程，用于生成dist.js
+```
+
+## 调试说明
+切换至 `scripts/engine_io_mini` 目录，执行 `node app.js` 启动服务端，在浏览器中打开 
+`index.html` 即可，调试部分可自行修改代码。
