--- a/docs/engine_io/2.自制engine.io.md
+++ b/docs/engine_io/2.自制engine.io.md
@@ -1,4 +1,4 @@
-# 自制 engine.io 服务端
+# 自制 engine.io
 由于在自己的业务场景只会用到 `engine.io` 的 `websocket` 通讯部分，所以这里对 `engine.io`
 做了一次抽取工作，去除了 `polling` 以及从 `polling` 升级到 `websocket` 的部分。最终做了
 一个mini版的 `engine.io`（服务端代码从原先2100行左右简化到600行左右，客户端则代码简化到300
